--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,18 @@
         * tutorials/Changing_Background_Color_1/index.html: Moved the icon for
         the color picker to the line explaining to use the tool.
 
+        * tutorials/Lite_Quickies/index.html: Moved the icons to be in the
+        line explaining the tools.
+
+        * tutorials/Bezier_Selections/index.html: Moved the icon to the line
+        explaining it.
+
+        * tutorials/Red_Eye_Removal/index.html: Fixed some typos and moved the
+        icon to the line.
+
+        * tutorials/Drawing_Shapes/index.html: Typos and also moved the tool
+        icons around a bit.
+
 2002-12-25 scizzo <scizzo@gimp.org>
 
         * tutorials/Color2BW/index.html: Fixed the broken link to the
