--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-05 scizzo <scizzo@gimp.org>
+
+	* tutorials/Perl-Debugged/index.html: Add the div.debug to the right
+	places in the tutorial.
+
 2003-01-05 brix <brix@gimp.org>
 
 	* style/default.css: added a div.debug class. maybe the background
