Modified ChangeLog. Fixed a typo.
Modified ChangeLog.
Fixed a typo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2003-01-05 scizzo <scizzo@gimp.org>
 
 	* tutorials/Perl-Debugged/index.html: Add the div.debug to the right
-	places in the tutorial.
+	places in the tutorial. Fixed a typo.
 
 2003-01-05 brix <brix@gimp.org>
 
