--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-01-26  Helvetix Victorinox  <helvetix@oak.mysterious.org>
+
+        * todo.xhtml: Prettification
+
+        * Added crontab/ directory, modified install.excludes and
+        install.sh to accomodate the new directory.
+
 2003-01-25  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * The new styles in style/wgo-decor.css and style/wgo-layout.css
