--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* includes/urls_maillist.inc: Removed the GIMPwin list because this
 	list is going to be removed and moved to GIMP Developer list.
 
+	* includes/urls_mailinglist.inc: Add a small description for
+	GIMP-Images mailinglist. Stolen from their site about the list.
+
 2003-01-26  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * todo.xhtml: Prettification
