Modified ChangeLog. Fixed some typos.
Modified ChangeLog.
Fixed some typos.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-01-26 scizzo <scizzo@gimp.org>
 
+	* mailing_list.html: Fixed some typos.
+
 	* todo.xhtml: Made some notes. And add my name to the mailinglist
 	thingys.
 
