Modified ChangeLog. Removed me from the mailinglist.
Modified ChangeLog.
Removed me from the mailinglist.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-27 scizzo <scizzo@gimp.org>
+
+	* todo.xhtml: Remove me from the mailinglist.
+	
 2003-01-26 scizzo <scizzo@gimp.org>
 
 	* mailing_list.html: Fixed some typos. Fixed some more typos.
