--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-10  Carol Spears  <carol@gimp.org>
+
+        * Changed some Linux to GNU/Linux:
+                unix/index.html
+                unix/howtos/index.html
+
 2003-02-09  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * Added new include files:
