--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2003-02-12 scizzo <scizzo@gimp.org>
+
+	* 3d_Logo/*, Advanced_Animations/*, Anti-Aliased_Threshold/*,
+	Basic_Perl/*, Basic_Scheme/*, Basic_Scheme2/*, Bezier_Selections/*, 
+	Blending_Exposures/*, Blown_Out_Highlights/*, Blur_Overlays/*, 
+	Borders_On_Selections/*, Changing_Background_Color_1/*,
+	Changing_Background_Color_2/*, Color2BW/*, Coloring_A_BW_Sketch/*,
+	ContrastMask/*, Creating_Icons/*, Custom_Brushes/*,
+	Draw_A_Paint_Brush/*, Drawables/*, Drawing_Shapes/*, Film_Grain/*,
+	Golden_Text/*, Image_Map/*, Image_Pipes/*, Image_Pipes2/*,
+	Lite_Quickies/*, Perl-Debugged/*: Changing the include files and doing
+	some changes in the html files to try and make most of them valid
+	still some that needs more work. Also fixed so that the Anti-Aliased
+	Threshold tutorial is complete with original link and e-mail to
+	author.
+
+	* /includes/wgo-xhtml-fini.xhtml: Helvetix helped me to add a
+	validation link so that you only need to use this when validating. So
+	the site using this include file can validate it directly from the
+	link.
+
 2003-02-10  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * Code refactoring in contest/gallery.py and ancillary xhtml.py
