--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,24 @@
+2003-02-15  Helvetix Victorinox  <helvetix@oak.mysterious.org>
+
+        * Added wgo-admin-{init,fini}.xhtml for the administration pages.
+
+        * Cleanup and refactoring of some code.
+
+        * Converted the remaining parts of the programmatic pages to the
+          new include files.
+
 2003-02-16 scizzo <scizzo@gimp.org>
 
-	* /about/*.html, /books/index.html, /bugs/*: Using new include files.
-	
-	* /about/index.html: Add a <br/> to the mediakit so that there is
-	space between that link and the next subtitle. 
-	
-	* index.html, bugs.html, mail_lists.html, registry.html, team.html:
-	Using the new include files.
+        * /about/*.html, /books/index.html, /bugs/*: Using new include files.
+        
+        * /about/index.html: Add a <br/> to the mediakit so that there is
+        space between that link and the next subtitle. 
+        
+        * index.html, bugs.html, mail_lists.html, registry.html, team.html:
+        Using the new include files.
 
-	* template.html: New includes and fixed a bug where <p> needs to be
-	ended before starting a list.
+        * template.html: New includes and fixed a bug where <p> needs to be
+        ended before starting a list.
 
 2003-02-14  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
