Moved to gnomecvs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-27  Manish Singh  <yosh@gimp.org>
+
+	* moved to gnomecvs
+
 2003-02-24  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * Changed the ChangeLog formatting to include a heading for all
