--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-03-05  Carol Spears  <carol@gimp.org>
+
+        * Fixed some typos in unix/:
+                unix/index-in.html
+                unix/howtos/bugzilla-in.html 
+                unix/howtos/stable-cvs-get-in.html 
+                unix/howtos/stable-cvs-build-in.html 
+                admin/gimp-web-urls
+
 2003-03-04  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * Modified programmatic/tools/rewrite_attrs.py to insert a warning
